[6.3.0]
 * fix Muplipart request model and implement it for a jdk HTTP client (thanks to https://github.com/NTPape)
 * remove any Google+ mention (switch to clean Google OAuth2) (thanks to https://github.com/fvasco)
 * fix Microsoft Azure AD v1.0 and v2.0 (thanks to https://github.com/kenpusney and https://github.com/oscararias)
 * add new API Asana (https://asana.com/) (thanks to https://github.com/joestazak)
 * state param should be used only for authorization url generation, for v2 only, for Authorization Code Grant only,
   and it should be set per request, not per created OAuthService

[6.2.0]
 * add new API Microsoft Azure Active Directory (Azure AD) 2.0 (thanks to https://github.com/rzukow and https://github.com/dgrudenic)

[6.1.0]
 * add new API Keycloak (https://www.keycloak.org/) (thanks to https://github.com/JureZelic)
 * add new API Discord (https://discordapp.com/) (thanks to https://github.com/Jokuni)

[6.0.0]
 * make redirect_uri optional while Access Token requesting on OAuth 2.0 (thanks to https://github.com/computerlove)
 * switch to java 9+ (from java 7 only) for compilation. Runtime is still java 7+. Complement README with links and RFC descriptions.
 * switch OAuth2 Bearer Token Usage from enum OAuth2SignatureType to interface BearerSignature to be extensible
 * add new API Wunderlist (https://www.wunderlist.com/) (thanks to https://github.com/M-F-K)

[5.6.0]
 * remove support for obsolete NetEase (http://www.163.com/) and sohu 搜狐 (http://www.sohu.com/) (thanks to https://github.com/zawn)
 * add Multipart functionality to JDK Http Client (thanks to https://github.com/eos1d3)
 * switch OAuth2 ClientAuthenticationType from enum to interface ClientAuthentication to be extensible according to
   https://tools.ietf.org/html/rfc6749#section-2.3.2 (thanks to https://github.com/zawn)
 * add RuntimeException processing in async http clients (delivered to onError callbacks) (thanks to https://github.com/jochen314)